# LLM_Survey_Eval

./: .gitignore  CITATION.cff  LICENSE  README.md  examples_demo.ipynb  examples_demo_full_pipeline.ipynb  pyproject.toml  readme.md  readme_zh_cn.md  setup.cfg  start_dev.ps1
agent/backend/: main.py
agent/backend/samples/: toy_ground_truth.csv
agent/frontend/src/: App.jsx  styles.css
backup_before_llm_chat_20260120_163036/agent/: README.md
backup_before_llm_chat_20260120_163036/agent/backend/: main.py  requirements.txt
backup_before_llm_chat_20260120_163134/: pyproject.toml  readme.md
backup_before_llm_chat_20260120_163134/agent/backend/samples/: toy_generated.csv
backup_before_llm_chat_20260120_163134/agent/frontend/: .deps_stamp  index.html  package-lock.json  package.json
backup_before_llm_chat_20260120_163134/agent/frontend/src/: App.jsx  styles.css
backup_before_llm_chat_20260120_163134/llm_survey_eval/: __init__.py  summary.py  tier4.py
llm_survey_eval/: __init__.py  tier1.py  tier2.py  tier3.py  tier4.py
